--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
-    <script defer  src="./main.js"></script>
 </head>
-
 <body>
-    <div>
-        <h1>Awesome Books</h1>
-        <div id="book-list"></div>
+    <div class="page-wrapper">
+        <h1>All awesome books</h1>
+       <div id="book-list">
+       
+       </div>
+       <div class="hr"></div>
+       <h2>Add a new book</h2>
         <form>
-            <ul>
+            <ul >
                 <li>
-                    <input id="title" type="text" placeholder="Title" required />
+                    <input id="title" type="text" placeholder="Title" required>
                 </li>
                 <li>
-                    <input id="author" type="text" placeholder="Author" required />
+                    <input id="author" type="text" placeholder="Author" required>
                 </li>
                 <li>
                     <button id="add-button" type="button">Add</button>
                 </li>
             </ul>
+           
         </form>
-        <hr />
+        <hr>
     </div>
+    <script type="module" src="./main.js"></script>
 </body>
-
 </html>
